RESOLVED FIXED38710
Fix guard around IndexedDatabase
https://bugs.webkit.org/show_bug.cgi?id=38710
Summary Fix guard around IndexedDatabase
Laszlo Gombos
Reported 2010-05-06 17:50:43 PDT
In PageGroup.h this guard seems incorrect to me: #if ENABLE(DOM_STORAGE) IndexedDatabase* indexedDatabase(); #endif
Attachments
proposed patch (1.48 KB, patch)
2010-05-06 17:53 PDT, Laszlo Gombos
kenneth: review-
kenneth: commit-queue-
remove extra ChangeLog (998 bytes, patch)
2010-05-07 14:38 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2010-05-06 17:53:33 PDT
Created attachment 55326 [details] proposed patch
Kenneth Rohde Christiansen
Comment 2 2010-05-07 05:52:28 PDT
Comment on attachment 55326 [details] proposed patch > Index: ChangeLog > =================================================================== > --- ChangeLog (revision 58924) > +++ ChangeLog (working copy) > @@ -1,3 +1,12 @@ > +2010-05-06 Laszlo Gombos <laszlo.1.gombos@nokia.com> > + > + Reviewed by NOBODY (OOPS!). > + > + [Qt] Build the ImageDiff tool for all platforms including Windows and Symbian > + https://bugs.webkit.org/show_bug.cgi?id=38706 > + > + * WebKit.pro: This ChangeLog seems to be for another patch! >
Laszlo Gombos
Comment 3 2010-05-07 14:38:48 PDT
Created attachment 55419 [details] remove extra ChangeLog
WebKit Commit Bot
Comment 4 2010-05-08 12:05:56 PDT
Comment on attachment 55419 [details] remove extra ChangeLog Clearing flags on attachment: 55419 Committed r59034: <http://trac.webkit.org/changeset/59034>
WebKit Commit Bot
Comment 5 2010-05-08 12:06:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.