2010-05-08  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        Fix guard around IndexedDatabase
        https://bugs.webkit.org/show_bug.cgi?id=38710

        No new tests, there is no new functionality.

        * page/PageGroup.h:

Canonical link: https://commits.webkit.org/50275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59034 268f45cc-cd09-0410-ab3c-d52691b4dbfc