WebCore/page/PageGroup.h
@@ -70,7 +70,7 @@ namespace WebCore {
         StorageNamespace* localStorage();
         bool hasLocalStorage() { return m_localStorage; }
 #endif
-#if ENABLE(DOM_STORAGE)
+#if ENABLE(INDEXED_DATABASE)
         IndexedDatabase* indexedDatabase();
 #endif
 
